PIM-9453: Query for group product identifiers (#12779)

--- a/src/Akeneo/Pim/Enrichment/Bundle/Resources/config/normalizers.yml
+++ b/src/Akeneo/Pim/Enrichment/Bundle/Resources/config/normalizers.yml
@@ -61,6 +61,7 @@ services:
             - '@pim_structure_version.provider.structure_version.group'
             - '@pim_versioning.manager.version'
             - '@pim_enrich.normalizer.version'
+            - '@akeneo.pim.enrichment.product.query.product_identifiers_by_group'
         tags:
             - { name: pim_internal_api_serializer.normalizer }
 
