--- a/src/Akeneo/Pim/Enrichment/Bundle/Resources/config/controllers.yml
+++ b/src/Akeneo/Pim/Enrichment/Bundle/Resources/config/controllers.yml
@@ -193,9 +193,11 @@ services:
             - '@pim_catalog.comparator.filter.product_model'
             - '@pim_enrich.converter.enrich_to_standard.product_value'
             - '@pim_catalog.updater.product_model'
+            - '@pim_catalog.updater.product'
             - '@pim_catalog.remover.product_model'
             - '@pim_catalog.validator.product'
             - '@pim_catalog.saver.product_model'
+            - '@pim_catalog.saver.product'
             - '@pim_enrich.normalizer.product_violation'
             - '@pim_enrich.normalizer.entity_with_family_variant.light'
             - '@pim_catalog.factory.product_model'
