--- a/src/Akeneo/Channel/Bundle/Resources/config/jobs.yml
+++ b/src/Akeneo/Channel/Bundle/Resources/config/jobs.yml
@@ -39,6 +39,7 @@ services:
             - '@akeneo_batch.job_repository'
             -
                 - '@pim_connector.step.csv_locale_export.export'
+            - true
         tags:
             - { name: akeneo_batch.job, connector: '%pim_connector.connector_name.csv%', type: '%pim_connector.job.export_type%' }
 
